<resources>
    <string name="app_name">Megore</string>
    <string name="error_unavailable">Network unavailable!</string>
    <string name="text_unread_messages_count">Unread messages({$targetNumber})</string>
    <string name="text_share">Share</string>
    <string name="text_cancel">Cancel</string>
    <string name="tips_no_need_upgrade">This is the latest version</string>
    <string name="tips_please_waiting">Please wait...</string>
    <string name="settings">Settings</string>
    <string name="text_retry">Retry</string>
    <string name="palmplay_update_manager">Update Manager</string>
    <string name="message">My Messages</string>
    <string name="text_app">App</string>
    <string name="text_uninstall">Uninstall</string>
    <string name="text_install">Install</string>
    <string name="network_unavailable">Network error!</string>
    <string name="text_installed">Installed</string>
    <string name="text_information">Information</string>
    <string name="text_delete">Delete</string>
    <string name="palmplay_update_manager_desc_none">All apps are up to date.</string>
    <string name="text_update">Update</string>
    <string name="text_video">Video</string>
    <string name="current_version">Current Version: {$targetName}</string>
    <string name="select_all">Select All</string>
    <string name="text_configure_network">Network unavailable. Configure network</string>
    <string name="text_network_error">Network Error</string>
    <string name="text_ignore">Ignore</string>
    <string name="yesterday">Yesterday</string>
    <string name="deselect_all">Deselect All</string>
    <string name="deleting_completed">Deleting completed.</string>
    <string name="no_message">No Message</string>
    <string name="text_new">New</string>
    <string name="text_bottom_fun">FUN</string>
    <string name="text_hot">Hot</string>
    <string name="text_bottom_home">HOME</string>
    <string name="update_all">Update All</string>
    <string name="text_featured">Featured</string>
    <string name="cruel_leave">Not now</string>
    <string name="try_it_now">Try it now</string>
    <string name="text_my_app_title">My App</string>
    <string name="text_games">Game</string>
    <string name="x_version">Version: {$targetName}</string>
    <string name="reload">Reload</string>
    <string name="check_your_network">Please check your network, </string>
    <string name="go_setting_arrow">Go settings >></string>
    <string name="file_is_bad">corrupted files</string>
    <string name="text_accelerate">Boost</string>
    <string name="text_clean2">Clean</string>
    <string name="clean_up_more">Clean up more></string>
    <string name="speed_up_for_you">{$targetName}% RAM freed  success</string>
    <string name="accelerating_tips">BOOSTING</string>
    <string name="is_bset_status">Already in best condition</string>
    <string name="text_cache">Cache junk</string>
    <string name="text_mounting">Obsolete APK files</string>
    <string name="text_memory">Phone Boost</string>
    <string name="deep_clean">Junk Files </string>
    <string name="text_release">Found</string>
    <string name="text_scan_file_name">Scanning: </string>
    <string name="text_stop">Stop</string>
    <string name="one_key_clean">Clean Junk</string>
    <string name="text_released">Cleaned</string>
    <string name="text_system_cache">System Cache</string>
    <string name="no_uodate_content">There is no updated content</string>
    <string name="phone_is_perfect">Already in best condition</string>
    <string name="press_again_to_exit">Press again to exit.</string>
    <!--未翻译-->
    <string name="text_home">Home</string>
    <string name="no_download_task_now">No download task now</string>
    <string name="welcome">Welcome</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="text_residual_junk_files">Residual junk files</string>

    <string name="privacy_policy_1"> and </string>
    <string name="privacy_policy_2">Terms of Service</string>
    <string name="privacy_policy_prefix">By using Megore you agree to our</string>

    <string name="empty"></string>
    <string name="versionname_prefix">Ver{$targetName}</string>
    <!--liuzhi modify 20170921 -->
    <!--<string name="facebook_app_id">1852117934895309</string>-->

    <string name="text_bottom_app">@string/text_app</string>
    <string name="text_bottom_game">@string/text_games</string>
    <string name="text_bottom_video">@string/text_video</string>

    <string name="launcher_admob_ad_skip">Skip</string>

    <string name="my_app">My App</string>
    <string name="agree_and_enter">Agree and Enter</string>
    <string name="default_notification_channel_id" translatable="false">CHANNEL_ID_COMMON</string>

    <string name="permission_rationale_message">You have rejected us to apply for authorization, please agree to authorization, otherwise the function can\'t be used normally!</string>
    <string name="permission_denied_forever_message">We need some of the permissions you rejected or the system failed to apply failed, please manually set to the page authorize, otherwise the function can\'t be used normally!</string>

    <string name="launcher_admob_ad_visit">VISIT</string>
    <string name="text_ad">AD</string>
    <string name="play">Play</string>
</resources>
