<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="62dp"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/container_free_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_free_share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/ic_not_bar_home" />

        <TextView
            android:id="@+id/tv_operate_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:text="@string/text_home"
            android:textColor="#e5e5e5"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_accelerate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_boost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_notification_boost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/text_accelerate"
            android:textColor="#e5e5e5"
            android:textSize="11sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_clean"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@mipmap/ic_not_bar_clean"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/text_clean2"
        android:textColor="#e5e5e5"
        android:textSize="11sp" />

    <RelativeLayout
        android:id="@+id/container_update"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableTop="@mipmap/ic_not_bar_update"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/text_update"
            android:textColor="#e5e5e5"
            android:textSize="11sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_update"
            android:layout_marginStart="-4dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginTop="-6dp"
            android:layout_toEndOf="@id/tv_update"
            android:layout_toRightOf="@id/tv_update">

            <ImageView
                android:id="@+id/iv_update_tips"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/transparent_small_round_point" />

            <TextView
                android:id="@+id/tv_update_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="9sp" />
        </FrameLayout>
    </RelativeLayout>


</LinearLayout>