<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.megore.play.widget.flyingstar.FlyingStarView
        android:id="@+id/flyingStarView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/tv_accelerate_tips"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="94dp"
        android:background="@drawable/bg_memory_accelerate"
        android:gravity="center"
        android:text="@string/accelerating_tips"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/ll_accelerate_result"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="94dp"
        android:background="@drawable/bg_memory_accelerate"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_accelerate_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/speed_up_for_you"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_clean_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/clean_up_more"
            android:textColor="#00d9ff"
            android:textSize="12sp" />
    </LinearLayout>

    <!--加速球-->
    <LinearLayout
        android:id="@+id/btn_accelerate_ball"
        android:layout_width="64dp"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="84dp"
        android:background="@mipmap/img_accelerate_grayball"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_accelerate_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@mipmap/img_accelerate_finish_small" />

            <TextView
                android:id="@+id/tv_accelerate_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textColor="#cccccc"
                android:textSize="7sp"
                android:visibility="gone" />
        </LinearLayout>


        <ImageView
            android:id="@+id/iv_windmill"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/img_accelerate_windmill"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>