<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:visibility="visible"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_collapseMode="pin">

        <include layout="@layout/layout_common_title" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_messages_count"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:text="@string/text_unread_messages_count"
        android:textColor="#999999"
        android:textSize="14sp" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent"
        android:paddingStart="@dimen/padding_big"
        android:paddingLeft="@dimen/padding_big"
        android:paddingTop="@dimen/padding_big"
        android:paddingEnd="@dimen/padding_big"
        android:paddingRight="@dimen/padding_big" />

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_bottom"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_select_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/selector_common_radio_bg"
            android:drawableLeft="@drawable/selector_common_radio_bg"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:minWidth="64dp"
            android:paddingStart="@dimen/dp_08"
            android:paddingLeft="@dimen/dp_08"
            android:paddingEnd="@dimen/dp_08"
            android:paddingRight="@dimen/dp_08"
            android:text="@string/select_all"
            android:textColor="#000000"
            android:textSize="@dimen/font_size_big" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/selector_sys_msg_delete_btn_bg"
            android:gravity="center"
            android:minWidth="96dp"
            android:paddingStart="@dimen/dp_08"
            android:paddingLeft="@dimen/dp_08"
            android:paddingEnd="@dimen/dp_08"
            android:paddingRight="@dimen/dp_08"
            android:text="@string/text_delete"
            android:textColor="#ffffff"
            android:textSize="@dimen/font_size_big" />
    </LinearLayout>

</LinearLayout><!-- TOP SECRET -->
